fix main card bottom spacing

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -16,6 +16,7 @@ header mat-toolbar a {
 
 main {
   margin: 1em;
+  padding-bottom: 1rem;
 }
 
 .dash {
